; ModuleID = '/home/carl/AnghaBench/lede/package/lean/shortcut-fe/src/extr_sfe_ipv6.c_sfe_ipv6_register_sync_rule_callback.c'
source_filename = "/home/carl/AnghaBench/lede/package/lean/shortcut-fe/src/extr_sfe_ipv6.c_sfe_ipv6_register_sync_rule_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sfe_ipv6 = type { i32, i32 }

@__si6 = common dso_local global %struct.sfe_ipv6 zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sfe_ipv6_register_sync_rule_callback(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.sfe_ipv6*, align 8
  store i32 %0, i32* %2, align 4
  store %struct.sfe_ipv6* @__si6, %struct.sfe_ipv6** %3, align 8
  %4 = load %struct.sfe_ipv6*, %struct.sfe_ipv6** %3, align 8
  %5 = getelementptr inbounds %struct.sfe_ipv6, %struct.sfe_ipv6* %4, i32 0, i32 0
  %6 = call i32 @spin_lock_bh(i32* %5)
  %7 = load %struct.sfe_ipv6*, %struct.sfe_ipv6** %3, align 8
  %8 = getelementptr inbounds %struct.sfe_ipv6, %struct.sfe_ipv6* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @rcu_assign_pointer(i32 %9, i32 %10)
  %12 = load %struct.sfe_ipv6*, %struct.sfe_ipv6** %3, align 8
  %13 = getelementptr inbounds %struct.sfe_ipv6, %struct.sfe_ipv6* %12, i32 0, i32 0
  %14 = call i32 @spin_unlock_bh(i32* %13)
  ret void
}

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local i32 @rcu_assign_pointer(i32, i32) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
